<?xml version="1.0" encoding="utf-8"?>	 
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"	 
	   android:orientation="vertical"	 
	   android:layout_width="fill_parent"	 
	   android:layout_height="fill_parent"	 
	   android:gravity="center">
	  	<TextView   
	  	  android:layout_width="fill_parent"  
		  android:layout_height="wrap_content"
	      android:text="@string/login" 
	      android:hint="@string/identifiant" /> 
        <EditText
	       android:id="@+id/login"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:singleLine="true" 
	       android:fadingEdge="horizontal"	 
	       android:layout_marginBottom="20dip"
	       android:hint="@string/login"/>	 
	   <TextView	 
	       android:layout_width="fill_parent" 	 
	       android:layout_height="wrap_content"	 
	       android:text="@string/passe"
	       android:hint="@string/passe"/>
	   <EditText
	       android:id="@+id/pass"	 
	       android:layout_width="fill_parent"	 
	       android:layout_height="wrap_content"	 
	       android:password="true"	 
	       android:singleLine="true" 
	       android:fadingEdge="horizontal"
	       android:hint="@string/passe"/>
	   <LinearLayout  
	       android:orientation="vertical" 
	       android:layout_width="fill_parent" 
	       android:layout_height="fill_parent" 
	       android:gravity="bottom"> 
	       <Button
	           android:id="@+id/connecter" 
	           android:layout_width="fill_parent" 
	           android:layout_height="wrap_content"
	           android:text="@string/identifier"/>    
	       <Button
	           android:id="@+id/quitter"
	           android:layout_width="fill_parent"
	           android:layout_height="wrap_content"
	           android:text="@string/quitter"/>	 
	    </LinearLayout>      
	</LinearLayout>